footer section added

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     />
   </head>
 
-  <body>
+  <body id="top">
     <header class="header">
       <div class="container">
         <!-- overlay  -->
         <div class="overlay" data-overlay></div>
 
-        <a href="./index.html" class="logo">
+        <a href="#" class="logo">
           <img src="images/logo.svg" alt="Filmlane logo" />
         </a>
 
@@ -55,7 +55,7 @@
 
         <nav class="navbar">
           <div class="navbar-top">
-            <a href="./index.html" class="logo">
+            <a href="#" class="logo">
               <img src="images/logo.svg" alt="Filmlane logo" />
             </a>
 
@@ -66,7 +66,7 @@
 
           <ul class="navbar-list">
             <li>
-              <a href="./index.html" class="navbar-link">Home</a>
+              <a href="#" class="navbar-link">Home</a>
             </li>
 
             <li>
@@ -1048,8 +1048,135 @@
             </ul>
           </div>
         </section>
+
+        <!-- CTA  -->
+        <section class="cta">
+          <div class="container">
+            <div class="title-wrapper">
+              <h2 class="cta-title">Trial start first 30 days.</h2>
+
+              <p class="cta-text">
+                Enter your email to create or restart your membership.
+              </p>
+            </div>
+
+            <form action="" class="cta-form">
+              <input
+                type="email"
+                name="email"
+                required
+                placeholder="Enter your email"
+                class="email-field"
+              />
+
+              <button type="submit" class="cta-form-btn">Get started</button>
+            </form>
+          </div>
+        </section>
       </article>
     </main>
+
+    <!-- Footer  -->
+    <footer class="footer">
+      <div class="footer-top">
+        <div class="container">
+          <div class="footer-brand-wrapper">
+            <a href="#" class="logo">
+              <img src="images/logo.svg" alt="Filmlane logo" />
+            </a>
+
+            <ul class="footer-list">
+              <li>
+                <a href="#" class="footer-link">Home</a>
+              </li>
+
+              <li>
+                <a href="#" class="footer-link">Movie</a>
+              </li>
+
+              <li>
+                <a href="#" class="footer-link">TV Show</a>
+              </li>
+
+              <li>
+                <a href="#" class="footer-link">Web Series</a>
+              </li>
+
+              <li>
+                <a href="#" class="footer-link">Pricing</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="divider"></div>
+
+          <div class="quicklink-wrapper">
+            <ul class="quicklink-list">
+              <li>
+                <a href="#" class="quicklink-link">Faq</a>
+              </li>
+
+              <li>
+                <a href="#" class="quicklink-link">Help center</a>
+              </li>
+
+              <li>
+                <a href="#" class="quicklink-link">Terms of use</a>
+              </li>
+
+              <li>
+                <a href="#" class="quicklink-link">Privacy</a>
+              </li>
+            </ul>
+
+            <ul class="social-list">
+              <li>
+                <a href="#" class="social-link">
+                  <ion-icon name="logo-facebook"></ion-icon>
+                </a>
+              </li>
+
+              <li>
+                <a href="#" class="social-link">
+                  <ion-icon name="logo-twitter"></ion-icon>
+                </a>
+              </li>
+
+              <li>
+                <a href="#" class="social-link">
+                  <ion-icon name="logo-pinterest"></ion-icon>
+                </a>
+              </li>
+
+              <li>
+                <a href="#" class="social-link">
+                  <ion-icon name="logo-linkedin"></ion-icon>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <div class="container">
+          <p class="copyright">
+            &copy; 2022 <a href="#">Shaad Imran</a>. All Rights Reserved
+          </p>
+
+          <img
+            src="images/footer-bottom-img.png"
+            alt="Online banking companies logo"
+            class="footer-bottom-img"
+          />
+        </div>
+      </div>
+    </footer>
+
+    <!-- Go To Top  -->
+    <a href="#top" class="go-top">
+      <ion-icon name="chevron-up"></ion-icon>
+    </a>
 
     <script src="script.js"></script>
 
